Adjust elision of omnibox keyword search label.

The search label will be limited to 50% of the omnibox width.
The minimum width will be just the search icon, although it's unlikely that
the omnibox will ever be that small on most platforms.

See bug for extended discussion.

BUG=694152

Review-Url: https://codereview.chromium.org/2731113002
Cr-Commit-Position: refs/heads/master@{#457255}

Former-commit-id: cdedb4788d9ead1bdb685cfa1e765ae15fcd7ea9